[package]
name = "rust-key-value-service"
version = "0.1.0"
authors = ["Aayush Agrawal <aayush.agrawal@swiggy.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"
actix = "0.8.3"
actix-web = "1.0.9"
